--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
-spring.application.name=MovieReview
+spring.application.name=MovieReview 
+# ?? ?? ??
+server.servlet.encoding.force=true
+# H2 ??????? ? ?? ?? ??
+spring.h2.console.enabled=true
+# H2 ??? ??????? ?? URL? ???
+spring.datasource.url=jdbc:h2:mem:testdb
+
+spring.jpa.defer-datasource-initialization=true
+logging.level.org.hibernate.SQL=DEBUG
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.type.descriptot.sql.BasicBinder=TRACE
