--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,10 @@ spring.jpa.defer-datasource-initialization=true
 logging.level.org.hibernate.SQL=DEBUG
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.type.descriptot.sql.BasicBinder=TRACE
+
+# ?? ?? ?? 10MB? ?? (??? 1MB)
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+spring.jpa.hibernate.ddl-auto=update
+
